퍼블리싱주우웅

--- a/css/main.scss
+++ b/css/main.scss
@@ -63,7 +63,10 @@ $innerwidth : 1320px;
 .banner {
   position: relative;
   display: block;
+  height: 50px;
+  background-color: #ffcc00;
 }
+.banner .inner{}
 /* 레이아웃 */
 .wrap {
   position: relative;
