--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,5 @@
-@charset 'utg-8';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
 * {
   margin: 0;
@@ -34,13 +33,12 @@ body {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: -0.45px;
-
+  font-style: normal;
 }
 
-/* 공통 클래스*/
+/* 공통클래스 */
 // 내용의 너비
 $innerwidth : 1320px;
-
 
 .clearfix::after {
   content: '';
@@ -49,7 +47,6 @@ $innerwidth : 1320px;
   width: 100%;
   clear: both;
 }
-
 
 .inner {
   position: relative;
@@ -65,44 +62,590 @@ $innerwidth : 1320px;
   display: block;
   height: 50px;
   background-color: #ffcc00;
+
+  .sw-banner {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide a {
+    position: relative;
+    display: block;
+    height: 100%;
+
+  }
+
+  .banner-1 {
+    background: url('../images/banner_pc_1.jpg') no-repeat center;
+  }
+
+  .banner-2 {
+    background: url('../images/banner_pc_2.jpg') no-repeat center;
+  }
+
+  .banner-3 {
+    background: url('../images/banner_pc_3.jpg') no-repeat center;
+  }
+
+  .sw-banner-control {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 28px;
+    display: block;
+    z-index: 9;
+
+    /* pagination bullet css 수정 */
+    .sw-banner-pg {
+      .swiper-pagination-bullet {
+        width: 10px;
+        height: 4px;
+        border-radius: 0;
+        background-color: #fff;
+        opacity: 0.4;
+        margin: 0 2px;
+      }
+
+      .swiper-pagination-bullet-active {
+        width: 20px;
+        height: 4px;
+        opacity: 1.0;
+      }
+    }
+  }
+
+  .banner-close {
+    position: absolute;
+    right: 15px;
+    top: 50%; //<--transform을 주지않으면 잘 안보인다.
+    transform: translateY(-50%);
+    display: block;
+    width: 32px;
+    height: 32px;
+    background: url(../images/x_icon.png) no-repeat center;
+    background-size: cover;
+    border: 0;
+    z-index: 9;
+    cursor: pointer;
+  }
 }
-.banner .inner{}
+
+
 /* 레이아웃 */
 .wrap {
   position: relative;
   display: block;
 }
+
 /* 상단 */
 .header {
   position: relative;
   display: block;
+  height: 80px;
+  background-color: #fff;
+  border-bottom: 1px solid #dcdcdc;
+  z-index: 9999;
+
+  .inner {
+    display: flex;
+    height: 100%;
+
+    .logo {
+      position: relative;
+      display: block;
+      width: 111px;
+      height: 42px;
+      background: url('../images/logo_new.png') no-repeat center;
+      background-size: cover;
+      margin-top: 20px;
+      margin-right: 65px;
+    }
+
+    .gnb {
+      position: relative;
+      display: block;
+
+      .menu {
+        position: relative;
+        display: block;
+
+        >li {
+          position: relative;
+          display: block;
+          float: left;
+
+          >a {
+            position: relative;
+            display: block;
+            line-height: 80px;
+            text-align: center;
+            font-size: 14px;
+            color: #777;
+            font-style: normal;
+            z-index: 3;
+            padding: 0 28px;
+
+            &:hover {
+              color: #f9d14d;
+            }
+          }
+
+          // focus 유지 서브메뉴를 찍었을때 주메뉴 호버노란색 유지
+          &:hover>a {
+            color: #f9d14d;
+          }
+
+          &:hover .submenu {
+            visibility: visible;
+          }
+
+          .submenu {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            top: 0;
+            display: block;
+            visibility: hidden;
+
+            padding-top: 80px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-bottom: 40px;
+            text-align: center;
+            background-color: #fff;
+            box-shadow: 0 10px 20px rgb(0 0 0 / 5%);
+
+            li {
+              padding: 17px 0;
+
+              a {
+                font-size: 13px;
+                white-space: nowrap;
+
+                &:hover {
+                  color: #f9d14d;
+                }
+              }
+            }
+          }
+        }
+      }
+
+
+    }
+
+    .member {
+      position: relative;
+      display: block;
+      margin-left: auto;
+      margin-top: 27px;
+
+      .member-list {
+        position: relative;
+        display: block;
+
+        li {
+          position: relative;
+          display: block;
+          float: left;
+          margin-left: 42px;
+
+          &:first-child {
+            margin-left: 0;
+          }
+
+        }
+
+        a {
+          position: relative;
+          display: block;
+          width: 23px;
+          height: 23px;
+
+          &:hover .tooltip {
+            visibility: visible;
+          }
+
+          .tooltip {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            top: 30px;
+            display: inline-block;
+            visibility: hidden;
+            color: #fff;
+            background-color: #000;
+            white-space: nowrap;
+            padding: 4px 8px;
+            border-radius: 3px;
+            font-size: 11px;
+
+            &::before {
+              content: '';
+              position: absolute;
+              left: 50%;
+              transform: translateX(-50%) rotate(45deg);
+              top: -3px;
+              display: block;
+              background-color: #000;
+              width: 6px;
+              height: 6px;
+            }
+          }
+
+        }
+
+        .member-cart {
+          background: url('../images/ico-cart.png') no-repeat center;
+        }
+
+        .member-mypage {
+          background: url('../images/ico-user.png') no-repeat center;
+        }
+
+        .member-login {
+          background: url('../images/ico-login.png') no-repeat center;
+        }
+
+
+
+      }
+    }
+  }
+
 }
-.header .inner {}
+
+
 /* 비주얼 */
 .visual {
   position: relative;
   display: block;
+  height: 910px;
+
+  .sw-visual {
+    width: 100%;
+    height: 100%;
+
+    .swiper-slide a {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      .visual-txt {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 45px;
+        display: block;
+        text-align: center;
+      }
+
+      .visual-title {
+        position: relative;
+        display: block;
+        font-size: 30px;
+        font-weight: 500;
+        color: #777;
+
+        margin-bottom: 35px;
+      }
+
+      .visual-desc {
+        position: relative;
+        display: block;
+        font-size: 20px;
+        color: #777;
+        margin-bottom: 20px;
+      }
+
+      .visual-bt {
+        position: relative;
+        display: inline-block;
+        font-size: 20px;
+        color: #fff;
+        background-color: #ffcc00;
+        padding: 10px 30px;
+        font-weight: 500;
+      }
+
+    }
+
+
+    .visual-1 {
+      background: url('../images/PC_sw_1_new.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .visual-2 {
+      background: url('../images/PC1_sw_2.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .visual-3 {
+      background: url('../images/PC2_Baby_3.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .visual-4 {
+      background: url('../images/PC3_sw_3.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .sw-visual-control {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 550px;
+      display: block;
+      z-index: 9;
+
+      .sw-visual-pg .swiper-pagination-bullet {
+        width: 10px;
+        height: 10px;
+        background-color: #fff;
+        opacity: 1.0;
+        margin: 0 4px;
+      }
+
+      .sw-visual-pg .swiper-pagination-bullet-active {
+        background-color: #ffcf42;
+      }
+
+
+    }
+  }
 }
+
 /* 카테고리 */
 .category {
   position: relative;
   display: block;
+
+  .inner {
+    display: flex;
+    flex-wrap: wrap;
+
+    >div {
+      position: relative;
+      display: flex;
+      width: 50%;
+      height: 620px;
+
+      padding: 80px;
+      align-content: center;
+      flex-wrap: wrap;
+
+      .category-desc {
+        position: relative;
+        display: block;
+        width: 100%;
+        font-size: 14px;
+        color: #777;
+        margin-bottom: 35px;
+      }
+
+      .category-link {
+        position: relative;
+        display: inline-block;
+        padding: 0 30px;
+        border: 2px solid #777;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 50px;
+
+      }
+
+      &:nth-child(1) {
+        background: url('../images/main_img01_2.png') no-repeat center;
+        background-size: cover;
+      }
+
+      &:nth-child(4) {
+        background: url('../images/main_img02_2.png') no-repeat center;
+        background-size: cover;
+      }
+
+      &:nth-child(5) {
+        background: url('../images/main_img03.png') no-repeat center;
+        background-size: cover;
+      }
+
+      &:nth-child(8) {
+        background: url('../images/main_img04.png') no-repeat center;
+        background-size: cover;
+      }
+    }
+  }
 }
-.category .inner {}
+
+
+
+
+
 /* 사이트맵 */
 .sitemap {
   position: relative;
   display: block;
+  padding: 35px 0;
+  border-top: 1px solid #dcdcdc;
 }
-.sitemap .inner {}
+
+.sitemap .inner {
+  display: flex;
+  justify-content: center;
+}
+
+.sitemap-menu {
+  position: relative;
+  display: block;
+  width: 770px;
+  
+
+}
+
+.sitemap-menu > li {
+  position: relative;
+  display: block;
+  float: left;
+  margin-right: 45px;
+  
+}
+
+.sitemap-menu > li > a {
+  position: relative;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  
+}
+.sitemap-menu > li > a:hover {
+  color: #ffcc00;
+}
+
+.sitemap-submenu {
+  position: relative;
+  display:block;
+  margin-top: 10px;
+}
+.sitemap-submenu li {
+  position: relative;
+  display:block;
+  margin-bottom: 5px;
+}
+.sitemap-submenu li a {
+  position: relative;
+  display: inline-block;
+  
+  font-size: 12px;
+}
+.sitemap-submenu li a:hover {
+  color: #ffcc00;
+}
+.sitemap-menu > li:hover > a{
+  color: #ffcc00;
+}
+
 /* 하단 */
 .footer {
   position: relative;
   display: block;
-  .footer-top {
 
-  }
-  .footer-bottom {
+}
+.footer .inner {
+  width: 777px;
+}
+.footer-top {
+  position: relative;
+  display: block;
+  border-top: 1px solid #dcdcdc;
+  background-color: #f3f3f3;
+  padding: 35px 0;
+}
 
-  }
+.siteinfo-list {
+  position: relative;
+  display: block;
+}
+
+.siteinfo-list li {
+  position: relative;
+  display: block;
+  white-space: nowrap;
+ 
+}
+.siteinfo-list li:last-child{
+  margin-bottom: 0;
+}
+
+.siteinfo-list li span {
+  position: relative;
+  display: inline-block;
+  margin-right: 40px;
+  font-size: 12px;
+  color: #7e868c;
+}
+
+.siteinfo-list li span em {
+  position: relative;
+  display: inline-block;
+  margin-left: 20px;
+  font-size: 12px;
+  color: #777;
+}
+
+
+.siteinfo-list li span a {
+  position: relative;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.insta-link {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: block;
+  width: 155px;
+  height: 30px;
+  background: url('../images/ico_insta.png') no-repeat center;
+
+}
+
+
+.footer-bottom {
+  position: relative;
+  display: block;
+  border-top: 1px solid #dcdcdc;
+  background-color: #e5e5e5;
+  padding: 25px 0;
+}
+
+.copy {
+  position: relative;
+  display: block;
+  float: left;
+  font-size: 12px;
+  color: #777;
+}
+
+.copy strong{
+  font-weight: 600;
+}
+
+.service-list{
+  position: relative;
+  display: block;
+  float: right;
+}
+.service-list li {
+  position: relative;
+  display: inline-block;
+  margin-left: 20px;
+}
+.service-list li a {
+  position: relative;
+  display: inline-block;
+  font-size: 12px;
+
 }
