--- a/css/main.css
+++ b/css/main.css
@@ -128,11 +128,13 @@ body {
   border-bottom: 1px solid #dcdcdc;
   z-index: 9999;
 }
-.header .inner {
+
+.inner {
   display: flex;
   height: 100%;
+  /* 상단 반응형 */
 }
-.header .inner .logo {
+.inner .logo {
   position: relative;
   display: block;
   width: 111px;
@@ -142,20 +144,20 @@ body {
   margin-top: 20px;
   margin-right: 65px;
 }
-.header .inner .gnb {
+.inner .gnb {
   position: relative;
   display: block;
 }
-.header .inner .gnb .menu {
+.inner .gnb .menu {
   position: relative;
   display: block;
 }
-.header .inner .gnb .menu > li {
+.inner .gnb .menu > li {
   position: relative;
   display: block;
   float: left;
 }
-.header .inner .gnb .menu > li > a {
+.inner .gnb .menu > li > a {
   position: relative;
   display: block;
   line-height: 80px;
@@ -166,16 +168,16 @@ body {
   z-index: 3;
   padding: 0 28px;
 }
-.header .inner .gnb .menu > li > a:hover {
+.inner .gnb .menu > li > a:hover {
   color: #f9d14d;
 }
-.header .inner .gnb .menu > li:hover > a {
+.inner .gnb .menu > li:hover > a {
   color: #f9d14d;
 }
-.header .inner .gnb .menu > li:hover .submenu {
+.inner .gnb .menu > li:hover .submenu {
   visibility: visible;
 }
-.header .inner .gnb .menu > li .submenu {
+.inner .gnb .menu > li .submenu {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -190,77 +192,106 @@ body {
   background-color: #fff;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
 }
-.header .inner .gnb .menu > li .submenu li {
+.inner .gnb .menu > li .submenu li {
   padding: 17px 0;
 }
-.header .inner .gnb .menu > li .submenu li a {
+.inner .gnb .menu > li .submenu li a {
   font-size: 13px;
   white-space: nowrap;
 }
-.header .inner .gnb .menu > li .submenu li a:hover {
+.inner .gnb .menu > li .submenu li a:hover {
   color: #f9d14d;
 }
-.header .inner .member {
-  position: relative;
-  display: block;
-  margin-left: auto;
-  margin-top: 27px;
+@media all and (max-width: 1080px) {
+  .inner .menu > li > a {
+    padding: 0 18px !important;
+  }
+  .inner .member-list > li {
+    margin-left: 22px !important;
+  }
 }
-.header .inner .member .member-list {
-  position: relative;
-  display: block;
+@media all and (max-width: 880px) {
+  .inner .menu > li > a {
+    padding: 0 10px !important;
+  }
 }
-.header .inner .member .member-list li {
-  position: relative;
-  display: block;
-  float: left;
-  margin-left: 42px;
-}
-.header .inner .member .member-list li:first-child {
-  margin-left: 0;
-}
-.header .inner .member .member-list a {
-  position: relative;
-  display: block;
-  width: 23px;
-  height: 23px;
-}
-.header .inner .member .member-list a:hover .tooltip {
-  visibility: visible;
-}
-.header .inner .member .member-list a .tooltip {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 30px;
-  display: inline-block;
-  visibility: hidden;
-  color: #fff;
-  background-color: #000;
-  white-space: nowrap;
-  padding: 4px 8px;
-  border-radius: 3px;
-  font-size: 11px;
-}
-.header .inner .member .member-list a .tooltip::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) rotate(45deg);
-  top: -3px;
-  display: block;
-  background-color: #000;
-  width: 6px;
-  height: 6px;
-}
-.header .inner .member .member-list .member-cart {
-  background: url("../images/ico-cart.png") no-repeat center;
-}
-.header .inner .member .member-list .member-mypage {
-  background: url("../images/ico-user.png") no-repeat center;
-}
-.header .inner .member .member-list .member-login {
-  background: url("../images/ico-login.png") no-repeat center;
+@media all and (max-width: 800px) {
+  .inner .logo {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) !important;
+    margin-top: 0 !important;
+    margin-right: 0 !important;
+  }
+  .inner .gnb {
+    display: none !important;
+  }
+  .inner .member {
+    display: none !important;
+  }
+  .inner .member {
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-top: 27px;
+  }
+  .inner .member .member-list {
+    position: relative;
+    display: block;
+  }
+  .inner .member .member-list li {
+    position: relative;
+    display: block;
+    float: left;
+    margin-left: 42px;
+  }
+  .inner .member .member-list li:first-child {
+    margin-left: 0;
+  }
+  .inner .member .member-list a {
+    position: relative;
+    display: block;
+    width: 23px;
+    height: 23px;
+  }
+  .inner .member .member-list a:hover .tooltip {
+    visibility: visible;
+  }
+  .inner .member .member-list a .tooltip {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 30px;
+    display: inline-block;
+    visibility: hidden;
+    color: #fff;
+    background-color: #000;
+    white-space: nowrap;
+    padding: 4px 8px;
+    border-radius: 3px;
+    font-size: 11px;
+  }
+  .inner .member .member-list a .tooltip::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) rotate(45deg);
+    top: -3px;
+    display: block;
+    background-color: #000;
+    width: 6px;
+    height: 6px;
+  }
+  .inner .member .member-list .member-cart {
+    background: url("../images/ico-cart.png") no-repeat center;
+  }
+  .inner .member .member-list .member-mypage {
+    background: url("../images/ico-user.png") no-repeat center;
+  }
+  .inner .member .member-list .member-login {
+    background: url("../images/ico-login.png") no-repeat center;
+  }
 }
 
 /* 비주얼 */
@@ -346,6 +377,50 @@ body {
   background-color: #ffcf42;
 }
 
+/* 비주얼 반응형 */
+@media all and (max-width: 760px) {
+  .visual {
+    height: 69vw;
+    margin-bottom: 20px;
+  }
+
+  .sw-visual-control {
+    top: 41.6vw !important;
+  }
+
+  .visual-txt {
+    top: 46vw !important;
+  }
+
+  .visual-title {
+    font-size: 20px !important;
+    margin-bottom: 2.65vw !important;
+  }
+
+  .visual-desc {
+    font-size: 12px !important;
+    margin-bottom: 1.5vw !important;
+  }
+
+  .visual-bt {
+    font-size: 12px !important;
+    padding: 1vw 1.5vw !important;
+  }
+}
+@media all and (max-width: 640px) {
+  .visual {
+    height: 550px;
+    margin-bottom: 0;
+  }
+
+  .sw-visual-control {
+    top: 330px !important;
+  }
+
+  .visual-txt {
+    top: 390px !important;
+  }
+}
 /* 카테고리 */
 .category {
   position: relative;
