--- a/css/main.scss
+++ b/css/main.scss
@@ -145,7 +145,7 @@ $innerwidth : 1320px;
   background-color: #fff;
   border-bottom: 1px solid #dcdcdc;
   z-index: 9999;
-
+}
   .inner {
     display: flex;
     height: 100%;
@@ -231,421 +231,507 @@ $innerwidth : 1320px;
         }
       }
 
-
     }
 
-    .member {
-      position: relative;
-      display: block;
-      margin-left: auto;
-      margin-top: 27px;
+    /* 상단 반응형 */
+    @media all and (max-width:1080px) {
+      .menu>li>a {
+        padding: 0 18px !important;
+      }
 
-      .member-list {
-        position: relative;
-        display: block;
-
-        li {
-          position: relative;
-          display: block;
-          float: left;
-          margin-left: 42px;
-
-          &:first-child {
-            margin-left: 0;
-          }
-
-        }
-
-        a {
-          position: relative;
-          display: block;
-          width: 23px;
-          height: 23px;
-
-          &:hover .tooltip {
-            visibility: visible;
-          }
-
-          .tooltip {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            top: 30px;
-            display: inline-block;
-            visibility: hidden;
-            color: #fff;
-            background-color: #000;
-            white-space: nowrap;
-            padding: 4px 8px;
-            border-radius: 3px;
-            font-size: 11px;
-
-            &::before {
-              content: '';
-              position: absolute;
-              left: 50%;
-              transform: translateX(-50%) rotate(45deg);
-              top: -3px;
-              display: block;
-              background-color: #000;
-              width: 6px;
-              height: 6px;
-            }
-          }
-
-        }
-
-        .member-cart {
-          background: url('../images/ico-cart.png') no-repeat center;
-        }
-
-        .member-mypage {
-          background: url('../images/ico-user.png') no-repeat center;
-        }
-
-        .member-login {
-          background: url('../images/ico-login.png') no-repeat center;
-        }
-
-
-
+      .member-list>li {
+        margin-left: 22px !important;
       }
     }
+
+    @media all and (max-width:880px) {
+      .menu>li>a {
+        padding: 0 10px !important;
+      }
+    }
+
+    @media all and (max-width:800px) {
+      .logo {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%) !important;
+        margin-top: 0 !important;
+        margin-right: 0 !important;
+      }
+
+      .gnb {
+        display: none !important;
+      }
+
+      .member {
+        display: none !important;
+      }
+
+      .member {
+        position: relative;
+        display: block;
+        margin-left: auto;
+        margin-top: 27px;
+
+        .member-list {
+          position: relative;
+          display: block;
+
+          li {
+            position: relative;
+            display: block;
+            float: left;
+            margin-left: 42px;
+
+            &:first-child {
+              margin-left: 0;
+            }
+
+          }
+
+          a {
+            position: relative;
+            display: block;
+            width: 23px;
+            height: 23px;
+
+            &:hover .tooltip {
+              visibility: visible;
+            }
+
+            .tooltip {
+              position: absolute;
+              left: 50%;
+              transform: translateX(-50%);
+              top: 30px;
+              display: inline-block;
+              visibility: hidden;
+              color: #fff;
+              background-color: #000;
+              white-space: nowrap;
+              padding: 4px 8px;
+              border-radius: 3px;
+              font-size: 11px;
+
+              &::before {
+                content: '';
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%) rotate(45deg);
+                top: -3px;
+                display: block;
+                background-color: #000;
+                width: 6px;
+                height: 6px;
+              }
+            }
+
+          }
+
+          .member-cart {
+            background: url('../images/ico-cart.png') no-repeat center;
+          }
+
+          .member-mypage {
+            background: url('../images/ico-user.png') no-repeat center;
+          }
+
+          .member-login {
+            background: url('../images/ico-login.png') no-repeat center;
+          }
+
+
+
+        }
+      }
+    }
+
   }
 
-}
 
+  /* 비주얼 */
+  .visual {
+    position: relative;
+    display: block;
+    height: 910px;
 
-/* 비주얼 */
-.visual {
-  position: relative;
-  display: block;
-  height: 910px;
-
-  .sw-visual {
-    width: 100%;
-    height: 100%;
-
-    .swiper-slide a {
-      position: relative;
-      display: block;
+    .sw-visual {
       width: 100%;
       height: 100%;
 
-      .visual-txt {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: 45px;
-        display: block;
-        text-align: center;
-      }
-
-      .visual-title {
-        position: relative;
-        display: block;
-        font-size: 30px;
-        font-weight: 500;
-        color: #777;
-
-        margin-bottom: 35px;
-      }
-
-      .visual-desc {
-        position: relative;
-        display: block;
-        font-size: 20px;
-        color: #777;
-        margin-bottom: 20px;
-      }
-
-      .visual-bt {
-        position: relative;
-        display: inline-block;
-        font-size: 20px;
-        color: #fff;
-        background-color: #ffcc00;
-        padding: 10px 30px;
-        font-weight: 500;
-      }
-
-    }
-
-
-    .visual-1 {
-      background: url('../images/PC_sw_1_new.png') no-repeat center;
-      background-size: cover;
-    }
-
-    .visual-2 {
-      background: url('../images/PC1_sw_2.png') no-repeat center;
-      background-size: cover;
-    }
-
-    .visual-3 {
-      background: url('../images/PC2_Baby_3.png') no-repeat center;
-      background-size: cover;
-    }
-
-    .visual-4 {
-      background: url('../images/PC3_sw_3.png') no-repeat center;
-      background-size: cover;
-    }
-
-    .sw-visual-control {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      top: 550px;
-      display: block;
-      z-index: 9;
-
-      .sw-visual-pg .swiper-pagination-bullet {
-        width: 10px;
-        height: 10px;
-        background-color: #fff;
-        opacity: 1.0;
-        margin: 0 4px;
-      }
-
-      .sw-visual-pg .swiper-pagination-bullet-active {
-        background-color: #ffcf42;
-      }
-
-
-    }
-  }
-}
-
-/* 카테고리 */
-.category {
-  position: relative;
-  display: block;
-
-  .inner {
-    display: flex;
-    flex-wrap: wrap;
-
-    >div {
-      position: relative;
-      display: flex;
-      width: 50%;
-      height: 620px;
-
-      padding: 80px;
-      align-content: center;
-      flex-wrap: wrap;
-
-      .category-desc {
+      .swiper-slide a {
         position: relative;
         display: block;
         width: 100%;
-        font-size: 14px;
-        color: #777;
-        margin-bottom: 35px;
+        height: 100%;
+
+        .visual-txt {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: 45px;
+          display: block;
+          text-align: center;
+        }
+
+        .visual-title {
+          position: relative;
+          display: block;
+          font-size: 30px;
+          font-weight: 500;
+          color: #777;
+
+          margin-bottom: 35px;
+        }
+
+        .visual-desc {
+          position: relative;
+          display: block;
+          font-size: 20px;
+          color: #777;
+          margin-bottom: 20px;
+        }
+
+        .visual-bt {
+          position: relative;
+          display: inline-block;
+          font-size: 20px;
+          color: #fff;
+          background-color: #ffcc00;
+          padding: 10px 30px;
+          font-weight: 500;
+        }
+
       }
 
-      .category-link {
-        position: relative;
-        display: inline-block;
-        padding: 0 30px;
-        border: 2px solid #777;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 50px;
 
-      }
-
-      &:nth-child(1) {
-        background: url('../images/main_img01_2.png') no-repeat center;
+      .visual-1 {
+        background: url('../images/PC_sw_1_new.png') no-repeat center;
         background-size: cover;
       }
 
-      &:nth-child(4) {
-        background: url('../images/main_img02_2.png') no-repeat center;
+      .visual-2 {
+        background: url('../images/PC1_sw_2.png') no-repeat center;
         background-size: cover;
       }
 
-      &:nth-child(5) {
-        background: url('../images/main_img03.png') no-repeat center;
+      .visual-3 {
+        background: url('../images/PC2_Baby_3.png') no-repeat center;
         background-size: cover;
       }
 
-      &:nth-child(8) {
-        background: url('../images/main_img04.png') no-repeat center;
+      .visual-4 {
+        background: url('../images/PC3_sw_3.png') no-repeat center;
         background-size: cover;
+      }
+
+      .sw-visual-control {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 550px;
+        display: block;
+        z-index: 9;
+
+        .sw-visual-pg .swiper-pagination-bullet {
+          width: 10px;
+          height: 10px;
+          background-color: #fff;
+          opacity: 1.0;
+          margin: 0 4px;
+        }
+
+        .sw-visual-pg .swiper-pagination-bullet-active {
+          background-color: #ffcf42;
+        }
+
+
       }
     }
   }
-}
+  /* 비주얼 반응형 */
+  @media all and (max-width: 760px) {
 
-
-
-
-
-/* 사이트맵 */
-.sitemap {
-  position: relative;
-  display: block;
-  padding: 35px 0;
-  border-top: 1px solid #dcdcdc;
-}
-
-.sitemap .inner {
-  display: flex;
-  justify-content: center;
-}
-
-.sitemap-menu {
-  position: relative;
-  display: block;
-  width: 770px;
+    .visual {
+      height: 69vw;
+      margin-bottom: 20px;
+    }
+    
+    .sw-visual-control {
+      top: 41.6vw !important;
+    }
   
-
-}
-
-.sitemap-menu > li {
-  position: relative;
-  display: block;
-  float: left;
-  margin-right: 45px;
+    .visual-txt {
+      top: 46vw !important;
+    }
   
-}
-
-.sitemap-menu > li > a {
-  position: relative;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 500;
+    .visual-title {
+      font-size: 20px !important;
+      margin-bottom: 2.65vw !important;
+    }
   
-}
-.sitemap-menu > li > a:hover {
-  color: #ffcc00;
-}
-
-.sitemap-submenu {
-  position: relative;
-  display:block;
-  margin-top: 10px;
-}
-.sitemap-submenu li {
-  position: relative;
-  display:block;
-  margin-bottom: 5px;
-}
-.sitemap-submenu li a {
-  position: relative;
-  display: inline-block;
+    .visual-desc {
+      font-size: 12px !important;
+      margin-bottom: 1.5vw !important;
+    }
   
-  font-size: 12px;
-}
-.sitemap-submenu li a:hover {
-  color: #ffcc00;
-}
-.sitemap-menu > li:hover > a{
-  color: #ffcc00;
-}
+    .visual-bt {
+      font-size: 12px !important;
+      padding: 1vw 1.5vw !important;
+    }
+  }
+  @media all and (max-width: 640px) {
+    .visual {
+      height: 550px;
+      margin-bottom: 0;
+    }
+    .sw-visual-control {
+      top: 330px !important;
+    }
+    .visual-txt {
+      top: 390px !important;
+    }
+  }
+  /* 카테고리 */
+  .category {
+    position: relative;
+    display: block;
 
-/* 하단 */
-.footer {
-  position: relative;
-  display: block;
+    .inner {
+      display: flex;
+      flex-wrap: wrap;
 
-}
-.footer .inner {
-  width: 777px;
-}
-.footer-top {
-  position: relative;
-  display: block;
-  border-top: 1px solid #dcdcdc;
-  background-color: #f3f3f3;
-  padding: 35px 0;
-}
+      >div {
+        position: relative;
+        display: flex;
+        width: 50%;
+        height: 620px;
 
-.siteinfo-list {
-  position: relative;
-  display: block;
-}
+        padding: 80px;
+        align-content: center;
+        flex-wrap: wrap;
 
-.siteinfo-list li {
-  position: relative;
-  display: block;
-  white-space: nowrap;
- 
-}
-.siteinfo-list li:last-child{
-  margin-bottom: 0;
-}
+        .category-desc {
+          position: relative;
+          display: block;
+          width: 100%;
+          font-size: 14px;
+          color: #777;
+          margin-bottom: 35px;
+        }
 
-.siteinfo-list li span {
-  position: relative;
-  display: inline-block;
-  margin-right: 40px;
-  font-size: 12px;
-  color: #7e868c;
-}
+        .category-link {
+          position: relative;
+          display: inline-block;
+          padding: 0 30px;
+          border: 2px solid #777;
+          font-size: 20px;
+          font-weight: 600;
+          line-height: 50px;
 
-.siteinfo-list li span em {
-  position: relative;
-  display: inline-block;
-  margin-left: 20px;
-  font-size: 12px;
-  color: #777;
-}
+        }
 
+        &:nth-child(1) {
+          background: url('../images/main_img01_2.png') no-repeat center;
+          background-size: cover;
+        }
 
-.siteinfo-list li span a {
-  position: relative;
-  display: inline-block;
-  margin-left: 20px;
-}
+        &:nth-child(4) {
+          background: url('../images/main_img02_2.png') no-repeat center;
+          background-size: cover;
+        }
 
-.insta-link {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  display: block;
-  width: 155px;
-  height: 30px;
-  background: url('../images/ico_insta.png') no-repeat center;
+        &:nth-child(5) {
+          background: url('../images/main_img03.png') no-repeat center;
+          background-size: cover;
+        }
 
-}
+        &:nth-child(8) {
+          background: url('../images/main_img04.png') no-repeat center;
+          background-size: cover;
+        }
+      }
+    }
+  }
 
 
-.footer-bottom {
-  position: relative;
-  display: block;
-  border-top: 1px solid #dcdcdc;
-  background-color: #e5e5e5;
-  padding: 25px 0;
-}
 
-.copy {
-  position: relative;
-  display: block;
-  float: left;
-  font-size: 12px;
-  color: #777;
-}
 
-.copy strong{
-  font-weight: 600;
-}
 
-.service-list{
-  position: relative;
-  display: block;
-  float: right;
-}
-.service-list li {
-  position: relative;
-  display: inline-block;
-  margin-left: 20px;
-}
-.service-list li a {
-  position: relative;
-  display: inline-block;
-  font-size: 12px;
+  /* 사이트맵 */
+  .sitemap {
+    position: relative;
+    display: block;
+    padding: 35px 0;
+    border-top: 1px solid #dcdcdc;
+  }
 
-}
+  .sitemap .inner {
+    display: flex;
+    justify-content: center;
+  }
+
+  .sitemap-menu {
+    position: relative;
+    display: block;
+    width: 770px;
+
+
+  }
+
+  .sitemap-menu>li {
+    position: relative;
+    display: block;
+    float: left;
+    margin-right: 45px;
+
+  }
+
+  .sitemap-menu>li>a {
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+
+  }
+
+  .sitemap-menu>li>a:hover {
+    color: #ffcc00;
+  }
+
+  .sitemap-submenu {
+    position: relative;
+    display: block;
+    margin-top: 10px;
+  }
+
+  .sitemap-submenu li {
+    position: relative;
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  .sitemap-submenu li a {
+    position: relative;
+    display: inline-block;
+
+    font-size: 12px;
+  }
+
+  .sitemap-submenu li a:hover {
+    color: #ffcc00;
+  }
+
+  .sitemap-menu>li:hover>a {
+    color: #ffcc00;
+  }
+
+  /* 하단 */
+  .footer {
+    position: relative;
+    display: block;
+
+  }
+
+  .footer .inner {
+    width: 777px;
+  }
+
+  .footer-top {
+    position: relative;
+    display: block;
+    border-top: 1px solid #dcdcdc;
+    background-color: #f3f3f3;
+    padding: 35px 0;
+  }
+
+  .siteinfo-list {
+    position: relative;
+    display: block;
+  }
+
+  .siteinfo-list li {
+    position: relative;
+    display: block;
+    white-space: nowrap;
+
+  }
+
+  .siteinfo-list li:last-child {
+    margin-bottom: 0;
+  }
+
+  .siteinfo-list li span {
+    position: relative;
+    display: inline-block;
+    margin-right: 40px;
+    font-size: 12px;
+    color: #7e868c;
+  }
+
+  .siteinfo-list li span em {
+    position: relative;
+    display: inline-block;
+    margin-left: 20px;
+    font-size: 12px;
+    color: #777;
+  }
+
+
+  .siteinfo-list li span a {
+    position: relative;
+    display: inline-block;
+    margin-left: 20px;
+  }
+
+  .insta-link {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: block;
+    width: 155px;
+    height: 30px;
+    background: url('../images/ico_insta.png') no-repeat center;
+
+  }
+
+
+  .footer-bottom {
+    position: relative;
+    display: block;
+    border-top: 1px solid #dcdcdc;
+    background-color: #e5e5e5;
+    padding: 25px 0;
+  }
+
+  .copy {
+    position: relative;
+    display: block;
+    float: left;
+    font-size: 12px;
+    color: #777;
+  }
+
+  .copy strong {
+    font-weight: 600;
+  }
+
+  .service-list {
+    position: relative;
+    display: block;
+    float: right;
+  }
+
+  .service-list li {
+    position: relative;
+    display: inline-block;
+    margin-left: 20px;
+  }
+
+  .service-list li a {
+    position: relative;
+    display: inline-block;
+    font-size: 12px;
+
+  }
