--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,7 @@ a {
 
 html {
   font-size: 10px;
+  overflow-x: hidden;
 }
 
 body {
@@ -34,6 +35,7 @@ body {
   line-height: 1.5;
   letter-spacing: -0.45px;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 /* 공통클래스 */
@@ -137,6 +139,7 @@ $innerwidth : 1320px;
   display: block;
 }
 
+
 /* 상단 */
 .header {
   position: relative;
@@ -145,7 +148,7 @@ $innerwidth : 1320px;
   background-color: #fff;
   border-bottom: 1px solid #dcdcdc;
   z-index: 9999;
-}
+
   .inner {
     display: flex;
     height: 100%;
@@ -183,6 +186,7 @@ $innerwidth : 1320px;
             color: #777;
             font-style: normal;
             z-index: 3;
+
             padding: 0 28px;
 
             &:hover {
@@ -190,7 +194,6 @@ $innerwidth : 1320px;
             }
           }
 
-          // focus 유지 서브메뉴를 찍었을때 주메뉴 호버노란색 유지
           &:hover>a {
             color: #f9d14d;
           }
@@ -216,6 +219,7 @@ $innerwidth : 1320px;
             box-shadow: 0 10px 20px rgb(0 0 0 / 5%);
 
             li {
+
               padding: 17px 0;
 
               a {
@@ -228,66 +232,29 @@ $innerwidth : 1320px;
               }
             }
           }
+
         }
       }
-
     }
 
-    /* 상단 반응형 */
-    @media all and (max-width:1080px) {
-      .menu>li>a {
-        padding: 0 18px !important;
-      }
+    .member {
+      position: relative;
+      display: block;
+      margin-left: auto;
+      margin-top: 25px;
 
-      .member-list>li {
-        margin-left: 22px !important;
-      }
-    }
-
-    @media all and (max-width:880px) {
-      .menu>li>a {
-        padding: 0 10px !important;
-      }
-    }
-
-    @media all and (max-width:800px) {
-      .logo {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%) !important;
-        margin-top: 0 !important;
-        margin-right: 0 !important;
-      }
-
-      .gnb {
-        display: none !important;
-      }
-
-      .member {
-        display: none !important;
-      }
-
-      .member {
+      .member-list {
         position: relative;
         display: block;
-        margin-left: auto;
-        margin-top: 27px;
 
-        .member-list {
+        li {
           position: relative;
           display: block;
+          float: left;
+          margin-left: 42px;
 
-          li {
-            position: relative;
-            display: block;
-            float: left;
-            margin-left: 42px;
-
-            &:first-child {
-              margin-left: 0;
-            }
-
+          &:first-child {
+            margin-left: 0;
           }
 
           a {
@@ -305,11 +272,14 @@ $innerwidth : 1320px;
               left: 50%;
               transform: translateX(-50%);
               top: 30px;
+
               display: inline-block;
               visibility: hidden;
+
               color: #fff;
               background-color: #000;
               white-space: nowrap;
+
               padding: 4px 8px;
               border-radius: 3px;
               font-size: 11px;
@@ -324,9 +294,9 @@ $innerwidth : 1320px;
                 background-color: #000;
                 width: 6px;
                 height: 6px;
+
               }
             }
-
           }
 
           .member-cart {
@@ -341,397 +311,537 @@ $innerwidth : 1320px;
             background: url('../images/ico-login.png') no-repeat center;
           }
 
-
-
         }
       }
     }
-
   }
 
+  /* 상단 반응형 */
+  @media all and (max-width:1080px) {
+    .menu>li>a {
+      padding: 0 18px !important;
+    }
 
-  /* 비주얼 */
-  .visual {
-    position: relative;
-    display: block;
-    height: 910px;
+    .member-list>li {
+      margin-left: 22px !important;
+    }
+  }
 
-    .sw-visual {
+  @media all and (max-width:880px) {
+    .menu>li>a {
+      padding: 0 10px !important;
+    }
+  }
+
+  @media all and (max-width:800px) {
+    .logo {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) !important;
+      margin-top: 0 !important;
+      margin-right: 0 !important;
+    }
+
+    .gnb {
+      display: none !important;
+    }
+
+    .member {
+      display: none !important;
+    }
+
+  }
+}
+
+
+/* 비주얼 */
+.visual {
+  position: relative;
+  display: block;
+
+
+  .sw-visual {
+    width: 100%;
+    height: 100%;
+
+    .swiper-slide a {
+      position: relative;
+      display: block;
       width: 100%;
       height: 100%;
 
-      .swiper-slide a {
+      .visual-txt {
+        position: relative;
+        display: block;
+        text-align: center;
+        padding-top: 50px 0;
+      }
+
+      .visual-title {
+        position: relative;
+        display: block;
+        font-size: 30px;
+        font-weight: 500;
+        color: #777;
+
+        margin-bottom: 35px;
+      }
+
+      .visual-desc {
+        position: relative;
+        display: block;
+        font-size: 20px;
+        color: #777;
+        margin-bottom: 20px;
+      }
+
+      .visual-bt {
+        position: relative;
+        display: inline-block;
+        font-size: 20px;
+        color: #fff;
+        background-color: #ffcc00;
+        padding: 10px 30px;
+        font-weight: 500;
+      }
+
+    }
+
+    .visual-img {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 600px;
+    }
+
+    .visual-1 {
+      background: url('../images/PC_sw_1_new.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .visual-2 {
+      background: url('../images/PC1_sw_2.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .visual-3 {
+      background: url('../images/PC2_sw_3.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .visual-4 {
+      background: url('../images/PC3_sw_3.png') no-repeat center;
+      background-size: cover;
+    }
+
+    .sw-visual-control {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 550px;
+      display: block;
+      z-index: 9;
+
+      .sw-visual-pg .swiper-pagination-bullet {
+        width: 10px;
+        height: 10px;
+        background-color: #fff;
+        opacity: 1.0;
+        margin: 0 4px;
+      }
+
+      .sw-visual-pg .swiper-pagination-bullet-active {
+        background-color: #ffcf42;
+      }
+
+
+    }
+  }
+}
+
+
+/* 비주얼 반응형 */
+@media all and (max-width: 1320px) {
+
+  .visual-img {
+    // 600 / 1320 * 100
+    height: 45vw !important;
+  }
+
+  .sw-visual-control {
+    // 550 / 1320 * 100    
+    top: 41.66vw !important;
+  }
+
+  .visual-txt {
+    // 645 / 1320 * 100  
+    padding: 3.78vw 0 !important;
+
+  }
+}
+
+@media all and (max-width: 800px) {
+
+  .visual-img {
+    height: 125vw !important;
+  }
+
+  .visual-1 {
+    background: url('../images/M_minimal_new.png') no-repeat center !important;
+  }
+
+  .visual-2 {
+    background: url('../images/M1_newborn.png') no-repeat center !important;
+  }
+
+  .visual-3 {
+    background: url('../images/M2_BabyEssence.png') no-repeat center !important;
+  }
+
+  .visual-4 {
+    background: url('../images/M3_Branding.png') no-repeat center !important;
+  }
+
+  .sw-visual-control {
+    top: 120vw !important;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .visual-img {
+    height: 124.375vw !important;
+  }
+
+  .visual-1 {
+    background: url('../images/v_480_1.png') no-repeat center !important;
+  }
+
+  .visual-2 {
+    background: url('../images/v_480_2.png') no-repeat center !important;
+  }
+
+  .visual-3 {
+    background: url('../images/v_480_3.png') no-repeat center !important;
+  }
+
+  .visual-4 {
+    background: url('../images/v_480_4.png') no-repeat center !important;
+  }
+
+  .sw-visual-control {
+    top: 115vw !important;
+  }
+
+  // .visual-txt {
+  //   position: relative;
+  //   display: block;
+  //   text-align: center;
+  //   width: 300px;
+  //   height: 200px;
+  //   padding-top: 50px 0;
+  // }
+}
+
+
+/* 카테고리 */
+.category {
+  position: relative;
+  display: block;
+
+  .inner {
+    display: flex;
+    flex-wrap: wrap;
+
+    >div {
+      position: relative;
+      display: flex;
+      width: 50%;
+      height: 620px;
+
+      padding: 80px;
+      align-content: center;
+      flex-wrap: wrap;
+
+      .category-desc {
         position: relative;
         display: block;
         width: 100%;
-        height: 100%;
-
-        .visual-txt {
-          position: absolute;
-          left: 50%;
-          transform: translateX(-50%);
-          bottom: 45px;
-          display: block;
-          text-align: center;
-        }
-
-        .visual-title {
-          position: relative;
-          display: block;
-          font-size: 30px;
-          font-weight: 500;
-          color: #777;
-
-          margin-bottom: 35px;
-        }
-
-        .visual-desc {
-          position: relative;
-          display: block;
-          font-size: 20px;
-          color: #777;
-          margin-bottom: 20px;
-        }
-
-        .visual-bt {
-          position: relative;
-          display: inline-block;
-          font-size: 20px;
-          color: #fff;
-          background-color: #ffcc00;
-          padding: 10px 30px;
-          font-weight: 500;
-        }
-
+        font-size: 14px;
+        color: #777;
+        margin-bottom: 35px;
       }
 
-
-      .visual-1 {
-        background: url('../images/PC_sw_1_new.png') no-repeat center;
-        background-size: cover;
-      }
-
-      .visual-2 {
-        background: url('../images/PC1_sw_2.png') no-repeat center;
-        background-size: cover;
-      }
-
-      .visual-3 {
-        background: url('../images/PC2_Baby_3.png') no-repeat center;
-        background-size: cover;
-      }
-
-      .visual-4 {
-        background: url('../images/PC3_sw_3.png') no-repeat center;
-        background-size: cover;
-      }
-
-      .sw-visual-control {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 550px;
-        display: block;
-        z-index: 9;
-
-        .sw-visual-pg .swiper-pagination-bullet {
-          width: 10px;
-          height: 10px;
-          background-color: #fff;
-          opacity: 1.0;
-          margin: 0 4px;
-        }
-
-        .sw-visual-pg .swiper-pagination-bullet-active {
-          background-color: #ffcf42;
-        }
-
-
-      }
-    }
-  }
-  /* 비주얼 반응형 */
-  @media all and (max-width: 760px) {
-
-    .visual {
-      height: 69vw;
-      margin-bottom: 20px;
-    }
-    
-    .sw-visual-control {
-      top: 41.6vw !important;
-    }
-  
-    .visual-txt {
-      top: 46vw !important;
-    }
-  
-    .visual-title {
-      font-size: 20px !important;
-      margin-bottom: 2.65vw !important;
-    }
-  
-    .visual-desc {
-      font-size: 12px !important;
-      margin-bottom: 1.5vw !important;
-    }
-  
-    .visual-bt {
-      font-size: 12px !important;
-      padding: 1vw 1.5vw !important;
-    }
-  }
-  @media all and (max-width: 640px) {
-    .visual {
-      height: 550px;
-      margin-bottom: 0;
-    }
-    .sw-visual-control {
-      top: 330px !important;
-    }
-    .visual-txt {
-      top: 390px !important;
-    }
-  }
-  /* 카테고리 */
-  .category {
-    position: relative;
-    display: block;
-
-    .inner {
-      display: flex;
-      flex-wrap: wrap;
-
-      >div {
+      .category-link {
         position: relative;
-        display: flex;
-        width: 50%;
-        height: 620px;
+        display: inline-block;
+        padding: 0 30px;
+        border: 2px solid #777;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 50px;
 
-        padding: 80px;
-        align-content: center;
-        flex-wrap: wrap;
+      }
 
-        .category-desc {
-          position: relative;
-          display: block;
-          width: 100%;
-          font-size: 14px;
-          color: #777;
-          margin-bottom: 35px;
-        }
+      &:nth-child(1) {
+        background: url('../images/main_img01_2.png') no-repeat center;
+        background-size: cover;
+      }
 
-        .category-link {
-          position: relative;
-          display: inline-block;
-          padding: 0 30px;
-          border: 2px solid #777;
-          font-size: 20px;
-          font-weight: 600;
-          line-height: 50px;
+      &:nth-child(4) {
+        background: url('../images/main_img02_2.png') no-repeat center;
+        background-size: cover;
+      }
 
-        }
+      &:nth-child(5) {
+        background: url('../images/main_img03.png') no-repeat center;
+        background-size: cover;
+      }
 
-        &:nth-child(1) {
-          background: url('../images/main_img01_2.png') no-repeat center;
-          background-size: cover;
-        }
-
-        &:nth-child(4) {
-          background: url('../images/main_img02_2.png') no-repeat center;
-          background-size: cover;
-        }
-
-        &:nth-child(5) {
-          background: url('../images/main_img03.png') no-repeat center;
-          background-size: cover;
-        }
-
-        &:nth-child(8) {
-          background: url('../images/main_img04.png') no-repeat center;
-          background-size: cover;
-        }
+      &:nth-child(8) {
+        background: url('../images/main_img04.png') no-repeat center;
+        background-size: cover;
       }
     }
   }
+}
+
+.wb2 {
+  position: absolute !important;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30px;
+  
+  display: none !important;
+
+  border: 2px solid #fff !important;
+  color: #fff !important;
+
+}
+// 카테고리 반응형
+@media all and (max-width:1320px) {
+  .category .inner > div {
+    // 620 / 1320 *100
+    height: 46.96vw !important;
+  }
+}
+@media all and (max-width:760px) {
+  .category .inner > div {
+    width: 100% !important;
+    height: 100vw !important;
+  }
+  .category-txt {
+    display: none !important;
+  }
+  .wb2 {
+    display: inline-block !important;
+  }
+}
 
 
 
+/* 사이트맵 */
+.sitemap {
+  position: relative;
+  display: block;
+  padding: 35px 0;
+  border-top: 1px solid #dcdcdc;
+}
 
+.sitemap .inner {
+  display: flex;
+  justify-content: center;
+}
 
-  /* 사이트맵 */
+.sitemap-menu {
+  position: relative;
+  display: table;
+  width: 770px;
+}
+
+.sitemap-menu>li {
+  position: relative;
+  display: table-cell;
+  // float: left;
+  // margin-right: 45px;
+
+}
+
+.sitemap-menu>li>a {
+  position: relative;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+
+}
+
+.sitemap-menu>li>a:hover {
+  color: #ffcc00;
+}
+
+.sitemap-submenu {
+  position: relative;
+  display: block;
+  margin-top: 10px;
+}
+
+.sitemap-submenu li {
+  position: relative;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.sitemap-submenu li a {
+  position: relative;
+  display: inline-block;
+
+  font-size: 12px;
+}
+
+.sitemap-submenu li a:hover {
+  color: #ffcc00;
+}
+
+.sitemap-menu>li:hover>a {
+  color: #ffcc00;
+}
+
+@media all and (max-width: 800px) {
   .sitemap {
-    position: relative;
-    display: block;
-    padding: 35px 0;
-    border-top: 1px solid #dcdcdc;
+    margin-left: 20px;
   }
-
-  .sitemap .inner {
-    display: flex;
-    justify-content: center;
-  }
-
-  .sitemap-menu {
-    position: relative;
-    display: block;
-    width: 770px;
-
-
-  }
-
-  .sitemap-menu>li {
-    position: relative;
-    display: block;
-    float: left;
-    margin-right: 45px;
-
-  }
-
-  .sitemap-menu>li>a {
-    position: relative;
-    display: inline-block;
-    font-size: 14px;
-    font-weight: 500;
-
-  }
-
-  .sitemap-menu>li>a:hover {
-    color: #ffcc00;
-  }
-
-  .sitemap-submenu {
-    position: relative;
-    display: block;
-    margin-top: 10px;
-  }
-
-  .sitemap-submenu li {
-    position: relative;
-    display: block;
-    margin-bottom: 5px;
-  }
-
   .sitemap-submenu li a {
-    position: relative;
-    display: inline-block;
-
-    font-size: 12px;
+    font-size: 10px;
   }
+}
 
-  .sitemap-submenu li a:hover {
-    color: #ffcc00;
-  }
+/* 하단 */
+.footer {
+  position: relative;
+  display: block;
 
-  .sitemap-menu>li:hover>a {
-    color: #ffcc00;
-  }
+}
 
-  /* 하단 */
-  .footer {
-    position: relative;
-    display: block;
+.footer .inner {
+  width: 777px;
+}
 
-  }
+.footer-top {
+  position: relative;
+  display: block;
+  border-top: 1px solid #dcdcdc;
+  background-color: #f3f3f3;
+  padding: 35px 0;
+}
+
+.siteinfo-list {
+  position: relative;
+  display: block;
+}
+
+.siteinfo-list li {
+  position: relative;
+  display: block;
+  white-space: nowrap;
+
+}
+
+.siteinfo-list li:last-child {
+  margin-bottom: 0;
+}
+
+.siteinfo-list li span {
+  position: relative;
+  display: inline-block;
+  margin-right: 40px;
+  font-size: 12px;
+  color: #777;
+}
+
+.siteinfo-list li span em {
+  position: relative;
+  display: inline-block;
+  margin-right: 20px;
+  font-size: 12px;
+  color: #7e868c;
+}
+
+.insta-link {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: block;
+  width: 155px;
+  height: 30px;
+  background: url('../images/ico_insta.png') no-repeat center;
+
+}
+
+
+.footer-bottom {
+  position: relative;
+  display: block;
+  border-top: 1px solid #dcdcdc;
+  background-color: #e5e5e5;
+  padding: 25px 0;
+}
+
+.copy {
+  position: relative;
+  display: block;
+  float: left;
+  font-size: 12px;
+  color: #777;
+}
+
+.copy strong {
+  font-weight: 600;
+}
+
+.service-list {
+  position: relative;
+  display: block;
+  float: right;
+}
+
+.service-list li {
+  position: relative;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.service-list li a {
+  position: relative;
+  display: inline-block;
+  font-size: 12px;
+
+}
+
+@media all and (max-width: 800px) {
 
   .footer .inner {
-    width: 777px;
+    width: 100%;
   }
-
-  .footer-top {
-    position: relative;
-    display: block;
-    border-top: 1px solid #dcdcdc;
-    background-color: #f3f3f3;
-    padding: 35px 0;
-  }
-
-  .siteinfo-list {
-    position: relative;
-    display: block;
-  }
-
-  .siteinfo-list li {
-    position: relative;
-    display: block;
-    white-space: nowrap;
-
-  }
-
-  .siteinfo-list li:last-child {
-    margin-bottom: 0;
+  
+  .footer-top .inner{
+    padding-bottom: 35px;
   }
 
   .siteinfo-list li span {
-    position: relative;
-    display: inline-block;
-    margin-right: 40px;
-    font-size: 12px;
-    color: #7e868c;
+    display: block;
+    margin-bottom: 10px;
   }
-
   .siteinfo-list li span em {
-    position: relative;
-    display: inline-block;
-    margin-left: 20px;
-    font-size: 12px;
-    color: #777;
+    margin-left: 10px;
+    width: 120px;
   }
-
-
-  .siteinfo-list li span a {
-    position: relative;
-    display: inline-block;
-    margin-left: 20px;
-  }
-
-  .insta-link {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    display: block;
-    width: 155px;
-    height: 30px;
-    background: url('../images/ico_insta.png') no-repeat center;
-
-  }
-
-
-  .footer-bottom {
-    position: relative;
-    display: block;
-    border-top: 1px solid #dcdcdc;
-    background-color: #e5e5e5;
-    padding: 25px 0;
-  }
-
   .copy {
-    position: relative;
-    display: block;
-    float: left;
-    font-size: 12px;
-    color: #777;
+    width: 100%;
+    text-align: center; 
+    margin-bottom: 20px;
   }
-
-  .copy strong {
-    font-weight: 600;
+  .service-list{
+    width: 100%;
+    text-align: center;
   }
-
-  .service-list {
-    position: relative;
-    display: block;
-    float: right;
-  }
-
-  .service-list li {
-    position: relative;
-    display: inline-block;
-    margin-left: 20px;
-  }
-
-  .service-list li a {
-    position: relative;
-    display: inline-block;
-    font-size: 12px;
-
-  }
+}
